--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
+    <link rel="stylesheet" th:href="@{styles/evidence/portfolio.css}">
+    <link rel="stylesheet" th:href="@{styles/evidence/evidence.css}">
+    <link rel="stylesheet" th:href="@{styles/evidence/categories.css}">
+    <link rel="stylesheet" th:href="@{styles/evidence/skills.css}">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+    <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+    <script th:inline="javascript">
+        let EVIDENCE_IDS = [];
+        let middle_id;
+    </script>
+    <script rel="script" th:src="@{scripts/evidence/saveWeblinks.js}"></script>
+</head>
 
 <div class="group-home">
     <div class="row">
 
         <div class="col-12 col-lg">
-            <h2>Recent Activity</h2>
+            <h2>Groups Evidence</h2>
+            <div th:replace="fragments/evidence"></div>
         </div>
 
         <div class="col-12 col-lg-5">
@@ -27,3 +44,9 @@
 
     </div>
 </div>
+
+<script th:inline="javascript">
+    for (let i = 0; i < EVIDENCE_IDS.length; i++) {
+        getWebLinks(EVIDENCE_IDS[i])
+    }
+</script>
