--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -7,6 +7,7 @@
     <title>Profile</title>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/user/user.css}">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
@@ -19,8 +20,8 @@
         const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
         const USER_ID = [[${pageUser.id}]];
         const PROJECT_ID = [[${currentProject.getId}]];
-        const START_DATE = [[${currentProject.getStartDate}]];
-        const END_DATE = [[${currentProject.getEndDate}]];
+        let START_DATE = [[${graphStartDate}]];
+        let END_DATE  = [[${graphEndDate}]];
         const IN_PORTFOLIO = [[${inPortfolio}]];
         let EVIDENCE_IDS = [];
         const MAX_WEBLINKS = [[ ${maxWeblinks} ]];
