--- a/portfolio/src/main/resources/templates/templatesUser/login.html
+++ b/portfolio/src/main/resources/templates/templatesUser/login.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
+    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <link th:href="@{styles/user/loginPage.css}" rel="stylesheet"/>
+
 </head>
-<body>
+<body class="dark forest">
 <div class="container">
     <div class="wrapper">
         <div class="title"><span>Login</span></div>
