--- a/portfolio/src/main/resources/static/styles/user/user.css
+++ b/portfolio/src/main/resources/static/styles/user/user.css
@@ -63,6 +63,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 1rem;
 }
 
 .evidence-chart__flex-container {
@@ -70,6 +71,7 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    gap: 1rem;
 }
 
 #user-chart__skills-chart, #user-chart__time-chart {
@@ -77,6 +79,12 @@ h1 {
     min-width: 35em;
     max-width: 60em;
     flex: 1 1 0px;
+    background-color: var(--surface);
+    border-radius: 8px;
+}
+
+#user-chart__skills-chart text, #user-chart__time-chart text {
+    fill: var(--text-surface);
 }
 
 .graph__dropdown {
@@ -84,11 +92,12 @@ h1 {
     max-width: fit-content;
 }
 
-.graphs-dropdown__button  {
+.graphs-dropdown__button {
     position: relative;
-    border: 1px solid var(--color-accent) !important;
-    color: black;
-    background-color: var(--color-complement) !important;
+    /*border: 1px solid var(--color-accent) !important;*/
+    border: none;
+    color: var(--text-surface);
+    background-color: var(--primary-highlight) !important;
     padding: 10px;
     height: 3rem;
     border-radius: 5px;
@@ -99,21 +108,31 @@ h1 {
 }
 
 .graphs-dropdown__button:hover {
-    color: #f78e55;
-    border-color: #f78e55;
-    background-color: #f4ebe6;
+    filter: brightness(85%);
     height: 3rem;
     box-shadow: none !important;
     font-size: 1rem;
+    color: var(--text-surface);
 }
 
-.graphs-dropdown__button:active {
-    background-color: #f78e55;
+/*.graphs-dropdown__button:active .graphs-dropdown__button:focus {*/
+/*    color: var(--text-surface) !important;*/
+/*}*/
+
+.dropdown-graph__container {
+    background-color: var(--surface);
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
+    border: none;
 }
 
+.chart__dropdown_item {
+    background-color: var(--surface);
+    color: var(--text-surface);
+}
 
-.chart__dropdown_item:active {
-    background-color: #f78e55;
+.chart__dropdown_item:hover {
+    background-color: var(--surface-highlight);
+    color: var(--text-surface);
 }
 
 .dropdown-menu {
