--- a/portfolio/src/main/resources/static/styles/user/loginPage.css
+++ b/portfolio/src/main/resources/static/styles/user/loginPage.css
@@ -56,7 +56,7 @@ body{
     height: 90px;
     background: var(--surface);
     border-radius: 5px 5px 0 0;
-    color: var(--text-surface);
+    color: var(--primary-highlight);
     font-size: 30px;
     font-weight: 600;
     display: flex;
@@ -141,7 +141,6 @@ form .row input::placeholder{
     color: green;
     text-decoration: none;
 }
-
 
 p{
     color: red;
