--- a/portfolio/src/main/resources/static/styles/user/registerPage.css
+++ b/portfolio/src/main/resources/static/styles/user/registerPage.css
@@ -26,7 +26,6 @@ html {
 }
 
 /******************** Login Page ********************/
-
 body{
     background: var(--background);
 }
@@ -38,39 +37,41 @@ body{
     font-family: 'Poppins',sans-serif;
 }
 
-/* ::selection{
-  background: rgba(26,188,156,0.3);
-} */
 .container{
     max-width: 500px;
     padding: 0 20px;
     margin: 50px auto;
 }
+
 .wrapper{
     width: 100%;
     background: var(--surface);
     border-radius: 5px;
     box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
 }
+
 .wrapper .title{
     height: 90px;
     background: var(--surface);
     border-radius: 5px 5px 0 0;
-    color: var(--text-surface);
+    color: var(--primary-highlight);
     font-size: 30px;
     font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .wrapper form{
     padding: 10px 25px 10px 25px;
 }
+
 .wrapper form .row{
     height: 40px;
     margin-bottom: 10px;
     position: relative;
 }
+
 .wrapper form .row input{
     height: 100%;
     width: 100%;
@@ -81,13 +82,16 @@ body{
     font-size: 16px;
     transition: all 0.3s ease;
 }
+
 form .row input:focus{
     border-color: black;
     box-shadow: inset 0px 0px 2px 2px rgba(26,188,156,0.25);
 }
+
 form .row input::placeholder{
     color: #999;
 }
+
 .wrapper form .row i{
     position: absolute;
     width: 47px;
@@ -101,17 +105,21 @@ form .row input::placeholder{
     align-items: center;
     justify-content: center;
 }
+
 .wrapper form .pass{
     margin: -8px 0 20px 0;
 }
+
 .wrapper form .pass a{
     color: #16a085;
     font-size: 17px;
     text-decoration: none;
 }
+
 .wrapper form .pass a:hover{
     text-decoration: underline;
 }
+
 .wrapper form .button input{
     display: block;
     position: relative;
