--- a/portfolio/src/main/resources/templates/templatesUser/userList.html
+++ b/portfolio/src/main/resources/templates/templatesUser/userList.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>List of Users</title>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
-    <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
-    <link rel="stylesheet" th:href="@{styles/user/userList.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+    <link rel="stylesheet" th:href="@{styles/theme.css}">
+    <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
+    <link rel="stylesheet" th:href="@{styles/user/userList.css}">
 </head>
-<body>
+<body class="dark cobalt">
 <!-- Import the application's header bar. -->
 <header th:replace="fragments/header :: header"></header>
 <!-- Import the application's navigation bar. -->
@@ -24,79 +25,81 @@
         <a th:href="'userList-' + ${lastPage} + ${sortingSuffix}">&raquo;</a>
     </div>
     <p th:text="${message}"></p>
-    <table aria-label="User List Table">
-        <thead>
-            <tr class="sort-header">
-                <th>
-                    <a th:href="'userList-' + ${currentPage} + '?sortType=name&isAscending=' + (${sortType} == 'name' ? (${isAscending} ? 'false' : 'true') : 'true')"
-                       th:text="'Name' + (${sortType} == 'name' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
-                </th>
-                <th>
-                    <a th:href="'userList-' + ${currentPage} + '?sortType=username&isAscending=' + (${sortType} == 'username' ? (${isAscending} ? 'false' : 'true') : 'true')"
-                       th:text="'Username' + (${sortType} == 'username' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
-                </th>
-                <th>
-                    <a th:href="'userList-' + ${currentPage} + '?sortType=alias&isAscending=' + (${sortType} == 'alias' ? (${isAscending} ? 'false' : 'true') : 'true')"
-                       th:text="'Alias' + (${sortType} == 'alias' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
-                </th>
-                <th>
-                    <a th:href="'userList-' + ${currentPage} + '?sortType=roles&isAscending=' + (${sortType} == 'roles' ? (${isAscending} ? 'false' : 'true') : 'true')"
-                       th:text="'Roles' + (${sortType} == 'roles' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
-                </th>
-                <th th:if="${user.isTeacher}">
-                    <div>Add role</div>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <div th:each="listedUser : ${users}">
-                <tr>
-                    <td><a th:href="@{profile-{id}(id=${listedUser.id})}" th:text="${listedUser.fullName}">Name</a></td>
-                    <td><span th:text="${listedUser.username}"> Username </span></td>
-                    <td><span th:text="${listedUser.nickname}"> Alias </span></td>
-                    <td>
-                        <div th:each="role: ${listedUser.roleStrings}">
-                            <div id="role-button">
-                                <div th:text="${role}"></div>
-                                <form th:if="${#lists.size(listedUser.roleStrings) > 1 and user.isTeacher and (!(role == 'Course Administrator') or (user.isAdmin && listedUser.id != currentUserId)) and (!(role == 'Teacher') or user.isAdmin)}" th:action="@{removeRole}"  method="post">
-                                    <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
-                                    <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
-                                    <input type="hidden" th:name="roleType"  th:value="${#strings.toUpperCase(role)}" />
-                                    <button class="button" type="submit"> X </button>
-                                </form>
-                            </div>
-                        </div>
-                    </td>
-                    <td th:if="${user.isTeacher}">
-                        <form th:if="${user.isTeacher and !#lists.contains(listedUser.roleStrings, 'Student')}" th:action="@{addRole}"  method="post">
-                            <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
-                            <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
-                            <input type="hidden" th:name="roleType"  th:value="STUDENT" />
-                            <button class="button" type="submit" title="add role">
-                                <div>+ Student</div>
-                            </button>
-                        </form>
-                        <form th:if="${user.isAdmin and !#lists.contains(listedUser.roleStrings, 'Teacher')}" th:action="@{addRole}"  method="post">
-                            <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
-                            <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
-                            <input type="hidden" th:name="roleType"  th:value="TEACHER" />
-                            <button class="button" type="submit">
-                                + Teacher
-                            </button>
-                        </form>
-                        <form th:if="${user.isAdmin and !#lists.contains(listedUser.roleStrings, 'Course Administrator')}" th:action="@{addRole}"  method="post">
-                            <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
-                            <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
-                            <input type="hidden" th:name="roleType"  th:value="COURSE_ADMINISTRATOR" />
-                            <button class="button" type="submit">
-                                + Course Administrator
-                            </button>
-                        </form>
-                    </td>
+    <card class="table-card">
+        <table aria-label="User List Table">
+            <thead>
+                <tr class="sort-header">
+                    <th>
+                        <a th:href="'userList-' + ${currentPage} + '?sortType=name&isAscending=' + (${sortType} == 'name' ? (${isAscending} ? 'false' : 'true') : 'true')"
+                           th:text="'Name' + (${sortType} == 'name' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
+                    </th>
+                    <th>
+                        <a th:href="'userList-' + ${currentPage} + '?sortType=username&isAscending=' + (${sortType} == 'username' ? (${isAscending} ? 'false' : 'true') : 'true')"
+                           th:text="'Username' + (${sortType} == 'username' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
+                    </th>
+                    <th>
+                        <a th:href="'userList-' + ${currentPage} + '?sortType=alias&isAscending=' + (${sortType} == 'alias' ? (${isAscending} ? 'false' : 'true') : 'true')"
+                           th:text="'Alias' + (${sortType} == 'alias' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
+                    </th>
+                    <th>
+                        <a th:href="'userList-' + ${currentPage} + '?sortType=roles&isAscending=' + (${sortType} == 'roles' ? (${isAscending} ? 'false' : 'true') : 'true')"
+                           th:text="'Roles' + (${sortType} == 'roles' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
+                    </th>
+                    <th th:if="${user.isTeacher}">
+                        <div>Add role</div>
+                    </th>
                 </tr>
-            </div>
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                <div th:each="listedUser : ${users}">
+                    <tr>
+                        <td><a th:href="@{profile-{id}(id=${listedUser.id})}" th:text="${listedUser.fullName}">Name</a></td>
+                        <td><span th:text="${listedUser.username}"> Username </span></td>
+                        <td><span th:text="${listedUser.nickname}"> Alias </span></td>
+                        <td>
+                            <div th:each="role: ${listedUser.roleStrings}">
+                                <div id="role-button">
+                                    <div th:text="${role}"></div>
+                                    <form th:if="${#lists.size(listedUser.roleStrings) > 1 and user.isTeacher and (!(role == 'Course Administrator') or (user.isAdmin && listedUser.id != currentUserId)) and (!(role == 'Teacher') or user.isAdmin)}" th:action="@{removeRole}"  method="post">
+                                        <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
+                                        <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
+                                        <input type="hidden" th:name="roleType"  th:value="${#strings.toUpperCase(role)}" />
+                                        <button class="button" type="submit"> X </button>
+                                    </form>
+                                </div>
+                            </div>
+                        </td>
+                        <td th:if="${user.isTeacher}">
+                            <form th:if="${user.isTeacher and !#lists.contains(listedUser.roleStrings, 'Student')}" th:action="@{addRole}"  method="post">
+                                <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
+                                <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
+                                <input type="hidden" th:name="roleType"  th:value="STUDENT" />
+                                <button class="button" type="submit" title="add role">
+                                    <div>+ Student</div>
+                                </button>
+                            </form>
+                            <form th:if="${user.isAdmin and !#lists.contains(listedUser.roleStrings, 'Teacher')}" th:action="@{addRole}"  method="post">
+                                <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
+                                <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
+                                <input type="hidden" th:name="roleType"  th:value="TEACHER" />
+                                <button class="button" type="submit">
+                                    + Teacher
+                                </button>
+                            </form>
+                            <form th:if="${user.isAdmin and !#lists.contains(listedUser.roleStrings, 'Course Administrator')}" th:action="@{addRole}"  method="post">
+                                <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
+                                <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
+                                <input type="hidden" th:name="roleType"  th:value="COURSE_ADMINISTRATOR" />
+                                <button class="button" type="submit">
+                                    + Course Administrator
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                </div>
+            </tbody>
+        </table>
+    </card>
     <div class="pagination">
         <a th:href="@{userList-{firstPage}{sortingSuffix}(firstPage=${firstPage}, sortingSuffix=${sortingSuffix})}">&laquo;</a>
         <a th:href="'userList-' + ${previousPage} + ${sortingSuffix}">&lt;</a>
