--- a/portfolio/src/main/resources/static/styles/user/addProfilePicture.css
+++ b/portfolio/src/main/resources/static/styles/user/addProfilePicture.css
@@ -15,6 +15,46 @@ label.helper, p.helper, .helper-inline{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: var(--surface);
+}
+
+.container {
+    border: 1px solid var(--surface);
+    border-radius: 8px;
+    background-color: var(--surface);
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 0px!important;
+}
+
+.container-b {
+    border: 1px solid var(--surface);
+    border-radius: 8px;
+    background-color: var(--surface);
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
+    width: fit-content;
+    margin: 50px auto;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-c {
+    width: fit-content;
+    margin: 10px 10px auto;
+    padding-bottom: 10px;
+}
+
+.wrapper{
+    width: 100%;
+    background: var(--surface);
+    border-radius: 5px;
+    box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+    padding: 15px 15px 45px 15px;
+    justify-content: center;
+    margin-top: -30px;
+    margin-bottom: -30px;
 }
 
 h1 {
@@ -33,6 +73,7 @@ h4 {
 }
 
 .profile-image__container {
+    width: fit-content;
     display: flex;
 }
 
@@ -44,6 +85,7 @@ h4 {
 #root, .helper-inline {
     margin-left: 30px;
     display: inline-block;
+
 }
 
 .error {
@@ -55,4 +97,77 @@ h4 {
 
 .button {
     padding: 3px 5px 3px 5px;
+}
+
+.title{
+    height: 90px;
+    background: var(--surface);
+    border-radius: 5px 5px 0 0;
+    color: var(--primary-highlight);
+    font-size: 30px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapper form .button input{
+    display: block;
+    position: relative;
+    border: 1px solid var(--primary-highlight);
+    border-radius: 10px;
+    background-color: var(--primary-highlight);
+    padding: 0 2rem 0 2rem;
+    margin-top: 1rem;
+}
+
+.wrapper form .button input:hover{
+    cursor: pointer;
+    filter: brightness(80%);
+}
+
+.wrapper form{
+    padding: 10px 25px 10px 25px;
+}
+
+.wrapper form .row{
+    height: 40px;
+    margin-bottom: 10px;
+    position: relative;
+}
+.wrapper form .row input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    padding-left: 15px;
+    border-radius: 5px;
+    border: 1px solid lightgrey;
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+form .row input:focus{
+    border-color: black;
+    box-shadow: inset 0px 0px 2px 2px rgba(26,188,156,0.25);
+}
+form .row input::placeholder{
+    color: #999;
+}
+.wrapper form .row i{
+    position: absolute;
+    width: 47px;
+    height: 100%;
+    color: #fff;
+    font-size: 18px;
+    background: #16a085;
+    border: 1px solid #16a085;
+    border-radius: 5px 0 0 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.addPpButtons {
+    margin: -25px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
