--- a/portfolio/src/main/resources/templates/templatesUser/addProfilePicture.html
+++ b/portfolio/src/main/resources/templates/templatesUser/addProfilePicture.html
@@ -4,54 +4,73 @@
     <meta charset="UTF-8">
     <title>Update Profile Picture</title>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
-    <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+    <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
+    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <link rel="stylesheet" th:href="@{styles/user/addProfilePicture.css}">
 </head>
-<body>
+<body class="light cobalt">
     <!-- Import the application's header bar. -->
     <header th:replace="fragments/header :: header"></header>
     <!-- Import the application's navigation bar. -->
     <nav th:replace="fragments/navbar :: navbar"></nav>
 
     <div id="page-content" class="constrict">
-        <div class="profile-pic__container">
-            <form th:action="@{addProfilePicture}" method="post" enctype="multipart/form-data">
-                <!--HIDDEN-->
-                <input type="hidden" th:name="fileContent" th:value="null" id="fileContent"/>
-                <input type="hidden" th:name="fileType" th:value="null" id="fileType"/>
+        <div class="container">
+            <div class="wrapper">
+                <form th:action="@{addProfilePicture}" method="post" enctype="multipart/form-data">
+                    <!--HIDDEN-->
+                    <input type="hidden" th:name="fileContent" th:value="null" id="fileContent"/>
+                    <input type="hidden" th:name="fileType" th:value="null" id="fileType"/>
 
-                <h1>Update Profile Picture</h1><br>
-
-                <div class="container">
-                    <p class="helper-inline">Current Picture</p>
-                    <p class="helper-inline" style="margin-left: 67px;"> Preview will appear here</p>
-                    <br>
-                    <div class="profile-image__container">
-                    <img th:src="${user.profileImagePath}" style="z-index: 1;" id="profile-image-display" alt="profilePhoto">
-                    <div id="root"></div>
+                    <div class="title">
+                        <h1>Update Profile Picture</h1>
                     </div>
-                    <br>
+                    <hr>
+
+                    <div class="container-b">
+                        <div class="container-c">
+                            <p class="helper-inline">Current Picture</p>
+                            <p class="helper-inline" style="margin-left: 67px;"> Preview will appear here</p>
+                            <br>
+                            <div class="profile-image__container">
+                                <img th:src="${user.profileImagePath}" style="z-index: 1;" id="profile-image-display" alt="profilePhoto">
+                                <div id="root"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h4>Upload a new photo</h4>
+                    <input type="file" id="img-input" required accept=".jpg,.png,.jpeg">
+                    <br><label class="helper" >Must be filetype jpg, jpeg, or png, will be cropped to 1:1 ratio</label><br>
+                    <p class="helper">Upload an image to see the preview</p><br>
+                    <p class="error" th:text="${deleteMessage}"></p>
+                    <p class="" th:text="${successMessage}"></p>
+                    <p class="error" th:text="${errorMessage}"></p>
+                    <div class="row button">
+                        <input class="btn profile-pic__save-button" id="submit-button" type="submit" value="Save" />
+                    </div>
+
+                </form>
+
+                <div class="addPpButtons">
+                    <form th:action="@{removeProfilePicture}"  method="post">
+                        <input type="hidden" th:name="username"  th:value="${username}" id="delete-username"/>
+                        <div class="row button">
+                            <input id="delete-button" type="submit" value="Remove Profile Picture" onClick="return confirm('Are you sure you want to permanently delete your profile picture?')">
+                        </div>
+                    </form>
                 </div>
-
-                <h4>Upload a new photo</h4>
-                <input type="file" id="img-input" required accept=".jpg,.png,.jpeg">
-                <br><label class="helper" >Must be filetype jpg, jpeg, or png, will be cropped to 1:1 ratio</label><br>
-                <p class="helper">Upload an image to see the preview</p><br>
-                <p class="error" th:text="${deleteMessage}"></p>
-                <p class="" th:text="${successMessage}"></p>
-                <p class="error" th:text="${errorMessage}"></p>
-                <input class="btn btn-outline-primary profile-pic__save-button" id="submit-button" type="submit" value="Save new Profile Picture" />
-            </form>
-
-            <form th:action="@{removeProfilePicture}"  method="post">
-                <input type="hidden" th:name="username"  th:value="${username}" id="delete-username"/><br>
-                <button class="btn btn-outline-primary" id="delete-button" type="submit" onClick="return confirm('Are you sure you want to permanently delete your profile picture?')">
-                    Delete my Profile Picture
-                </button>
-            </form>
+                <div class="addPpButtons">
+                    <form th:action="@{profile}">
+                        <div class="row button">
+                            <input type="submit" value="Back">
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
